Added a logo image

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
       <header>
-      	<%= image_tag("logo.png", :alt => "Microblog App") %>
+      	<%= image_tag("/images/logo.png", :alt => "Microblog App") %>
         <nav class="round">
           <ul>
           	<li><%= link_to "Home", "#" %></li>
