--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -78,3 +78,17 @@ a.signup_button{
   font-weight: bold;
   padding: 20px;	
 }
+
+/* Footer */
+
+footer {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;	
+  width: 900px;
+}
+
+footer nav {
+  float: none;	
+}
