--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,5 +1,7 @@
 .container {
-  width: 900px;
+  width: 710px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 body {
@@ -71,10 +73,10 @@ a.signup_button{
   margin-right: auto;
   display: block;
   text-align: center;
-  width: 190px;
+  width: 150px;
   color: #fff;
   background: #006400;
-  font-size: 150%;
+  font-size: 110%;
   font-weight: bold;
   padding: 20px;	
 }
@@ -86,7 +88,7 @@ footer {
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;	
-  width: 900px;
+  width: 710px;
 }
 
 footer nav {
